fix accordion display on ios

--- a/assets/css/proj_vit_classifiation.css
+++ b/assets/css/proj_vit_classifiation.css
@@ -132,3 +132,7 @@ p {
   align-items: center;
   height:300px;
 }
+
+.accordion-button {
+  cursor: pointer;
+}
